--- a/index.html
+++ b/index.html
@@ -640,8 +640,8 @@ window.paceOptions = {
 <script src="assets/js/core.min.js"></script>
 
 <!-- Google Map API -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgkZfsKWAFkYtOdVyHzoZNprbtUXr-uxM"></script>
- -->
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgkZfsKWAFkYtOdVyHzoZNprbtUXr-uxM"></script>
+ 
 </body>
 
 </html>
