--- a/index.html
+++ b/index.html
@@ -69,16 +69,6 @@
         </ul>
     </nav>
 
-    <!-- Social Media -->
-<!--     <div class="social-media">
-        <strong class="text-sm hidden-md">Check my social media!</strong>
-        <ul class="list-inline margin-t-10">
-            <li><a href="#" class="icon icon-xs"><i class="fa fa-facebook text-muted"></i></a></li>
-            <li><a href="#" class="icon icon-xs"><i class="fa fa-twitter text-muted"></i></a></li>
-            <li><a href="#" class="icon icon-xs"><i class="fa fa-google-plus text-muted"></i></a></li>
-        </ul>
-    </div> -->
-
 </header>
 <!-- Header / End -->
 
@@ -123,7 +113,7 @@
                         <span class="icon animated" data-animation="fadeInDown"><i class="ti-comment-alt text-tertiary"></i></span>
                         <h4><strong>About</strong> Me</h4>
                         <p class="lead">Over 6 years of professional experience working as a Web Developer. </p>
-                        <p>I have primarily specialized in implmenting mockups using grid frameworks to develop responsive websites using CSS3, HTML5, and JavaScript. Very comfortable working with Content Managements Systems such as WordPress and using front end frameworks like Bootstrap.</p>   
+                        <p>Exeprience working with various front end languages/technologies including: HTML/CSS, Javascript, PHP, jQuery, Laravel, WordPress, WooCommerce, Druapl, Joomla, Git, SASS, Grunt, Webpack. </p>   
                     </div>
 
                     <!-- Resume Box / Skills -->
@@ -133,7 +123,7 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
@@ -142,7 +132,7 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
@@ -151,7 +141,7 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
@@ -160,7 +150,7 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
@@ -168,7 +158,7 @@
                         </div>
                          <div class="skill">
                             <div class="progress progress-animated">
-                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                                     <span></span>
                                 </div>
                             </div>
@@ -540,13 +530,6 @@
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>1 (405) 990-7450</li>
             </ul>
             <a href="#" class="btn btn-primary" data-target="messenger"><span>Use Contact Form</span><i class="ti-email"></i></a>
-   <!--          <h5 class="margin-t-60">Check my social media!</h5>
-            <ul class="list-inline">
-                <li><a href="#" class="icon icon-circle icon-xs icon-facebook"><i class="fa fa-linkedin"></i></a></li>
-            </ul> -->
-            <!-- <h5>Like me on Facebook</h5>
-            <!-- FB Like
-        <!--     <div class="fb-like" data-href="http://www.facebook.com/suelopl" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div> -->
         </div>
 
     </section>
