Update canvas js path

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -18,7 +18,7 @@
 
 <canvas id="heroCanvas" width="2205" height="1110"></canvas>
 <script src="TweenLite.min.js"></script>
-<script src="Tweenmax.min.js"></script>
+<script src="TweenMax.min.js"></script>
 <script src="canvas.js"></script>
 
 </body>
