Update profile link and title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
 <!-- Title -->
-<title>Brady Christopher | Full Stack Senior Developer</title>
+<title>Brady Christopher | Senior Full Stack Developer</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="assets/img/favicon.png">
@@ -55,7 +55,7 @@
     <!-- Logo -->
     <div class="logo bg-primary">
         <h1 class="name">Brady <strong>Christopher</strong></h1>
-        <span class="caption text-secondary">Full Stack Senior Developer</span>
+        <span class="caption text-secondary">Senior Full Stack Developer</span>
     </div>
 
     <!-- Navigation -->
@@ -89,7 +89,7 @@
         <!-- Middle -->
         <div class="container container-wide v-bottom padding-v-80">
             <h1 class="text-lg margin-b-0">Hi! I’m <strong>Brady Christopher</strong></h1>
-            <h5 class="text-tertiary margin-b-40">Experienced Full Stack Developer</h5>
+            <h5 class="text-tertiary margin-b-40">Senior Full Stack Developer</h5>
             <span data-target="local-scroll"><a href="#resume" class="resume-btn btn btn-lg btn-primary animated" data-animation="bounceIn"><span>Go to my resume!</span><i class="ti-arrow-down"></i></a></span>
             <a href="/portfolio/assets/Brady_Christopher_Resume.pdf" target="_blank" class="btn btn-link"><span>Download my CV</span><i class="ti-file"></i></a>
         </div>
@@ -489,7 +489,7 @@
             <ul class="list-unstyled list-unstyled-icons">
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>Brady Christopher<br />Yukon, OK 73099</li>
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a href="mailto:brady.s.christopher@gmail.com">brady.s.christopher@gmail.com</a></li>
-                <li><i class="inline-icon icon-before-and-after text-primary fa fa-user"></i><a target="_blank" href="https://www.upwork.com/fl/bradyc2">https://www.upwork.com/fl/bradyc2</a></li>
+                <li><i class="inline-icon icon-before-and-after text-primary fa fa-user"></i><a target="_blank" href="https://www.linkedin.com/in/b-christopher/">https://www.linkedin.com/in/b-christopher/</a></li>
                 <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>1 (405) 436-1240</li>
             </ul>
             <a href="#" class="btn btn-primary" data-target="messenger"><span>Use Contact Form</span><i class="ti-email"></i></a>
